--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/liveforone/prisma-no-offset.git"
   },
   "keywords": [
     "prisma",
