--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "prisma-no-offset",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "This package is a utility package that helps you conveniently use no-offset paging when using prisma orm.",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -24,6 +24,10 @@
     "no offset paging",
     "paging",
     "no-offset",
-    "no-offset paging"
+    "no-offset paging",
+    "cursor based pagination",
+    "keyset pagination",
+    "infinite scroll",
+    "pagination without offset"
   ]
 }
